--- a/src/app/Components/index/index.component.html
+++ b/src/app/Components/index/index.component.html
@@ -19,7 +19,7 @@
       <div class="col-2 ">
           <form class="bg-primary">
               <label class="form-label m-3"><h5>Votre Nom</h5></label>
-              <input type="text" class="form-control" aria-describedby="emailHelp" />
+              <input type="text" name="inputCo" class="form-control" aria-describedby="emailHelp" />
             <button class="btn btn-outline-light bg-dark text-primary m-3" type="submit">Se connecter</button>
 
           </form>
@@ -28,7 +28,7 @@
     </div>
   </div>
 
-  <ul class="circles">
+  <!-- <ul class="circles">
           <li></li>
           <li></li>
           <li></li>
@@ -39,7 +39,7 @@
           <li></li>
           <li></li>
           <li></li>
-  </ul>
+  </ul> -->
 </div >
 
 <app-footer></app-footer>
