essai affichage channels

--- a/src/app/Components/channels/channels.component.html
+++ b/src/app/Components/channels/channels.component.html
@@ -1,2 +1,10 @@
 <p>channels works!</p>
+<p> kiwiwiwi
+    
+</p>
+<div *ngFor="let channel of this.channel.channelFiltered">
+
+    <p>{{channel.name}}</p>
+    <p>banananananan</p>
+</div>
 
