--- a/src/app/Components/user/user.component.html
+++ b/src/app/Components/user/user.component.html
@@ -1,1 +1,15 @@
 <p>user works!</p>
+
+bananaaaaa
+
+<div *ngFor="let user of this.user.userFiltered">
+
+    <p>kiwiiiii</p>
+
+
+    <H1>{{user.nickName}}</H1>
+    <p>{{user.lastName}}</p>
+    <p>{{user.firstName}}</p>
+    <p>{{user.status}}</p>
+
+</div>
