--- a/src/app/Components/main-channels/main-channels.component.html
+++ b/src/app/Components/main-channels/main-channels.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-header></app-header>
 
 <div class="container-fluid">
   <div class="row">
@@ -8,11 +8,6 @@
     </div>
 
     <!-- MAIN -->
-    <div class="col-md-9 ml-sm-auto col-lg-10 mt-5 mb-5">
-      <div class="row row-cols-6 g-1 p-2 mt-2">
-        <app-channels></app-channels>
-        <!--On appel le component product qui se trouve dans product-component.ts-->
-      </div>
-    </div>
+
   </div>
 </div>
