--- a/src/app/Components/user/user.component.css
+++ b/src/app/Components/user/user.component.css
@@ -1,6 +1,7 @@
 #userContainer {
     display: flex;
     margin: 10px;
+    width: 300px;
 }
 
 .userCard {
@@ -8,4 +9,10 @@
     flex-direction: column;
     border: solid black 1px;
     border-radius: 5px;
+    width: 90%;
+    padding: 10px 0 10px 15px;
+}
+.userNickname {
+    color: white;
+    font-size: x-large;
 }
