--- a/src/app/Components/user/user.component.html
+++ b/src/app/Components/user/user.component.html
@@ -1,15 +1,14 @@
-<p>user works!</p>
-
-bananaaaaa
-
-<div *ngFor="let user of this.user.userFiltered">
-
-    <p>kiwiiiii</p>
 
 
-    <H1>{{user.nickName}}</H1>
-    <p>{{user.lastName}}</p>
-    <p>{{user.firstName}}</p>
-    <p>{{user.status}}</p>
+<div id="userContainer" *ngFor="let user of this.user.userFiltered">
+
+
+    <div class="userCard" >
+
+        <p class="userNickname">{{user.nickname}}</p><br>
+        <p>{{user.lastName}}</p>
+        <p>{{user.firstName}}</p>
+        <p>{{user.status}}</p>
+    </div>
 
 </div>
