--- a/src/app/Components/channels/channels.component.html
+++ b/src/app/Components/channels/channels.component.html
@@ -1,12 +1,12 @@
-<p>channels works!</p>
 
+<p>--CHANNELS--</p>
 <div id="channelContainer" *ngFor="let channel of this.channel.channelFiltered">
+    
 <div class="channelCard">
-
-    <p>{{channel.name}}</p>
+    <span class="spanClose ">X</span>
+    <p>{{channel.name}} </p>
     <p>{{channel.creationDate}}</p>
     <p>{{channel.status}}</p>
 </div>
-  
 </div>
 
