--- a/src/app/Components/main-user/main-user.component.html
+++ b/src/app/Components/main-user/main-user.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-header></app-header>
 
 
 <div class="container-fluid">
@@ -17,3 +17,4 @@
       </div>
     </div>
   </div>
+  <app-footer></app-footer>
