--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -16,11 +16,11 @@
         <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href=""><strong>Accueil</strong></a>
         </li>
-        <li class="nav-item mx-5">
+        <!-- <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href="/channels"><strong>Channels</strong></a>
-        </li>
+        </li> -->
         <li class="nav-item mx-5">
-          <a class="nav-link active text-primary" href="/messages"><strong>Messages</strong></a>
+          <a  class="nav-link active text-primary" href="/messages"><strong>Messages</strong></a>
         </li>
         <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href="/user"><strong>Mon Profil</strong></a>
