Rajout Header Balises

--- a/src/app/Components/channels/channels.component.html
+++ b/src/app/Components/channels/channels.component.html
@@ -1,12 +1,16 @@
-
-<p>-- CHANNELS --</p>
+<h5>Channels</h5>
 <div id="channelContainer" *ngFor="let channel of this.channel.channelFiltered">
-    
-<div class="channelCard">
-    <span class="spanClose ">X</span>
-    <p>{{channel.name}} </p>
-    <p>{{channel.creationDate}}</p>
-    <p>{{channel.status}}</p>
+  <div class="card mb-1 bg-dark border-end-0 border-primary-subtle" style="width: 18rem">
+    <div class="card-body">
+      <h5 class="card-title text-primary">{{ channel.name }}</h5>
+      <h6 class="card-subtitle mb-2 text-light">
+        {{ channel.creationDate }}
+      </h6>
+      <p class="card-text text-primary">{{ channel.status }}</p>
+      <!--<a href="#" class="card-link">Card link</a>-->
+    </div>
+  </div>
 </div>
-</div>
-
+  <!--<div class="channelCard">
+    <span class="spanClose">X</span>
+  </div>-->
