mise en place de la deconnexion

--- a/src/app/Components/main-messages/main-messages.component.html
+++ b/src/app/Components/main-messages/main-messages.component.html
@@ -14,7 +14,17 @@
           <app-messages> </app-messages>
           <!--On appel le component product qui se trouve dans product-component.ts-->
         </div>
+
       </div>
+    </div>
+    <div class="newMessage">
+      <form action="">
+        <input type="text" name="">
+        <input type="hidden" name="" value="">
+        <input type="hidden" name="">
+        <input type="hidden" name="">
+      </form>
+
     </div>
   </div>
   <app-footer></app-footer>
