--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -13,18 +13,18 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item mx-5">
+        <!-- <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href=""><strong>Accueil</strong></a>
-        </li>
+        </li> -->
         <!-- <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href="/channels"><strong>Channels</strong></a>
         </li> -->
-        <li class="nav-item mx-5">
+        <!-- <li class="nav-item mx-5">
           <a  class="nav-link active text-primary" href="/messages"><strong>Messages</strong></a>
         </li>
         <li class="nav-item mx-5">
           <a class="nav-link active text-primary" href="/user"><strong>Mon Profil</strong></a>
-        </li>
+        </li> -->
       </ul>
       <form class="d-flex " role="search">
         <h6 class="text-primary mt-3 mx-5">{{this.user.currentUser?.nickname}}</h6>
