--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         height="20"
       />
     </a>
-    <a class="navbar-brand text-light" href="#"><strong>Slack Lite</strong></a>
+    <a class="navbar-brand text-light" href="#"><strong>Slack Like</strong></a>
 
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
