--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,10 +1,16 @@
 <footer class="fixed-bottom bg-dark">
-    <ul class="nav justify-content-center border-bottom bg-dark">
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/airbnb-logo.png" alt="AirBnB"></a></li>
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/blablacar.png" alt="BlaBlaCar"></a></li>
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/m6.png" alt="M6"></a></li>
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/deezer.png" alt="Deezer"></a></li>
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/criteo.png" alt="Criteo"></a></li>
-        <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img src="../../../assets/img/veepee.png" alt="Veepee"></a></li>
-      </ul>
+  <ul class="nav justify-content-center border-bottom bg-dark">
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/airbnb-logo.png" alt="AirBnB"></a></li>
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/blablacar.png" alt="BlaBlaCar"></a></li>
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/m6.png" alt="M6"></a></li>
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/deezer.png" alt="Deezer"></a></li>
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/criteo.png" alt="Criteo"></a></li>
+    <li class="nav-item mt-4 mb-2 mx-5"><a href="#" class="nav-link px-2 text-muted"><img
+          src="../../../assets/img/veepee.png" alt="Veepee"></a></li>
+  </ul>
 </footer>
