--- a/src/app/Components/main-messages/main-messages.component.html
+++ b/src/app/Components/main-messages/main-messages.component.html
@@ -17,41 +17,22 @@
   <div class="container-fluid text-center">
     <div class="row">
       <div class="col-2 bg-dark">
-        <button
-        class="btn btn-outline-primary text-light mt-4 pt-1"
-        (click)="creerChannel()"
-      >
-        Créer un Channel
-      </button>
+        <button class="btn btn-outline-primary text-light mt-4 pt-1" (click)="creerChannel()">
+          Créer un Channel
+        </button>
       </div>
       <div class="col-10 bg-dark">
         <div class="g-1 p-2 mb-3">
           <div class="mt-3">
-            <form
-              class="input-group m-2"
-              id="messageForm"
-              (submit)="getNewMessage()"
-            >
-              <span class="bg-dark text-primary input-group-text"
-              style="--bs-bg-opacity: .5;"
-
-                >Saisir votre message : </span
-              >
-              <textarea
-                class="form-control bg-primary text-light"
-                style="--bs-bg-opacity: .80;"
-                aria-label="With textarea"
-                name="newMessage"
-                [(ngModel)]="messageContent"
-              ></textarea>
+            <form class="input-group m-2" id="messageForm" (submit)="getNewMessage()">
+              <span class="bg-dark text-primary input-group-text" style="--bs-bg-opacity: .5;">Saisir votre message :
+              </span>
+              <textarea class="form-control bg-primary text-light" style="--bs-bg-opacity: .80;"
+                aria-label="With textarea" name="newMessage" [(ngModel)]="messageContent"></textarea>
               <span class="bg-dark input-group-text">
-                <button
-                  class="btn btn-outline-light bg-primary text-dark"
-                  type="submit"
-                >
+                <button class="btn btn-outline-light bg-primary text-dark" type="submit">
                   Ajouter un message
-                </button></span
-              >
+                </button></span>
             </form>
           </div>
         </div>
