--- a/src/app/Components/aside/aside.component.html
+++ b/src/app/Components/aside/aside.component.html
@@ -1,9 +1,7 @@
 <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark fixed-top mt-5">
-  <div class="d-flex channelContainer flex-column align-items-center align-items-sm-start px-1 pt-2 text-white min-vh-100">
-    <a
-      href="/"
-      class="d-flex  align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none"
-    >
+  <div
+    class="d-flex channelContainer flex-column align-items-center align-items-sm-start px-1 pt-2 text-white min-vh-100">
+    <a href="/" class="d-flex  align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
     </a>
     <div class="col-md-9 ml-sm-auto col-lg-10 mt-5 mb-5">
       <div class="channel">
@@ -11,5 +9,4 @@
       </div>
     </div>
   </div>
-  
 </div>
