--- a/src/app/Components/navbar/navbar.component.html
+++ b/src/app/Components/navbar/navbar.component.html
@@ -1,30 +1,11 @@
 <nav class="navbar navbar-expand-lg bg-dark fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img
-        src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Slack_Icon.png/600px-Slack_Icon.png"
-        alt=""
-        width="20"
-        height="20"
-      />
-    </a>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/76/Slack_Icon.png/600px-Slack_Icon.png" alt=""
+        width="20" height="20" /></a>
     <a class="navbar-brand text-light" href="#"><strong>Slack Like</strong></a>
-
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <!-- <li class="nav-item mx-5">
-          <a class="nav-link active text-primary" href=""><strong>Accueil</strong></a>
-        </li> -->
-        <!-- <li class="nav-item mx-5">
-          <a class="nav-link active text-primary" href="/channels"><strong>Channels</strong></a>
-        </li> -->
-        <!-- <li class="nav-item mx-5">
-          <a  class="nav-link active text-primary" href="/messages"><strong>Messages</strong></a>
-        </li>
-        <li class="nav-item mx-5">
-          <a class="nav-link active text-primary" href="/user"><strong>Mon Profil</strong></a>
-        </li> -->
       </ul>
       <form class="d-flex " role="search">
         <h6 class="text-primary mt-3 mx-5">{{this.user.currentUser?.nickname}}</h6>
